# IronVM

./: .gitignore  CMakeLists.txt  README.md  main.c
compiler/: compiler.py  test.il  test.ix  text.ix
compiler/compiler/: codegen.py  lexer.py  parser.py
docs/: opcode.txt
iron/: instructions.h  vm.c  vm.h
iron/interpreter/: interpretBranch.c  interpretCallRet.c  interpretCompare.c  interpretMath.c  interpretMemory.c  interpretStack.c  interpretSyscall.c  interpreter.h
iron/loader/: binary.c  ix.c  ixHeaders.h  loader.h
iron/memory/: ram.c  ram.h  stack.c  stack.h
iron/thread/: thread.c
src/: CMakeLists.txt  main.c
src/iron/: instructions.h  vm.c  vm.h
src/iron/core/: instance.c  instance.h  iron.c  iron.h  loader.c  loader.h  repr.h
src/iron/loader/: ix_loader.c  ix_loader.h
src/iron/memory/: gc.c  gc.h  mman.c  mman.h
src/iron/thread/: thread.c  thread.h
